--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "react-router": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,5 +30,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:80"
 }
